test/golden/fail/operator.sol
pragma solidity ^0.8.10;

contract SolidityTest {
  
    function arithmetic(uint16 a, uint16 b) public {
        int128 ff = -2 ** 127 ;
    }

}
